changes to style to fix posts table visibility, media queries for breadcrumbs, and added about.php

--- a/Forum/resources/styles/about-styles.css
+++ b/Forum/resources/styles/about-styles.css
@@ -1,13 +1,152 @@
+
 #about-us-area {
 	width: 90%;
-	margin: 10px auto auto auto;
-	background-color: rgba(0, 0, 0, .6);
+	margin: 10px auto 10px auto;
 	min-height: 100px;
-	color: white;
+	color: black;
 	padding: 10px;
 	border-radius: 10px;
 }
 
-#resources-area {
+#brittney {
+	width: 32%;
+	background-color: rgba(255, 255, 255, .5);
+	float: left;
+	margin-right: 2%;
+	overflow: hidden;
+	border-radius: 15px;
+	margin-bottom: 40px;
+}
 
+#hayden {
+	width: 32%%;
+	background-color: rgba(255, 255, 255, .5);
+	float: left;
+	margin-right: 2%;
+	overflow: hidden;
+	border-radius: 15px;
+	margin-bottom: 40px;
+}
+
+#namchi {
+	width: 32%;
+	background-color: rgba(255, 255, 255, .5);
+	float: left;
+	overflow: hidden;
+	border-radius: 15px;
+	margin-bottom: 40px;
+}
+
+.picture {
+	width: 100%;
+	height: 100%;
+}
+
+img {
+	max-width: 50%;
+	max-height: 50%;
+	border-radius: 10px;
+	margin-top: 10px;
+}
+
+.about-worker-ant {
+	overflow: hidden;
+/*	background-color: purple; */
+}
+
+h5 {
+	font-size: 30px;
+	margin: 0;
+
+}
+
+/* MEDIA QUERIES - USEFUL. LEARN IN FUTURE */
+@media screen and (max-width: 980px) {
+	
+	#brittney {
+		width: 49%;
+		margin-bottom: 10px;
+	}
+
+	#hayden {
+		width: 49%;
+		margin-bottom: 10px;
+		margin-right: 0;
+	}
+	
+	#namchi {
+		width: 100%;
+		margin-bottom: 40px; 
+	}
+
+	#inner-namchi {
+		width: 75%;
+		margin: auto;
+	}
+	
+	#namchi img {
+		float: left;
+		max-height: 32%;
+		max-width: 32%;
+		margin-right: 5%;
+		margin-bottom: 10px;
+	}
+	
+
+	#namchi .about-worker-ant {
+		float: left;
+		margin-top: 10px;
+	}
+}
+
+
+@media screen and (max-width: 700px) {
+	
+	#brittney {
+		width: auto;
+		float: none;
+	}
+
+	#hayden {
+		width: auto;
+		float: none;
+	}
+
+	#namchi {
+		width: auto;
+		float: none;
+	}
+
+	#namchi img {
+		max-width: 69%;
+		max-height: 69%;
+		float: none;
+		margin-right: 0;
+		margin-bottom: 0;
+	}
+
+	#namchi .about-worker-ant {
+		float: none;
+		margin-top: 0;
+	}
+}
+
+
+
+/* end QUERIES */
+
+
+#resources-area {
+	color: rgb(220, 220, 220);
+	background-color: rgba(0, 0, 0, 0.5);
+	padding: 5px 0;
+}
+
+#resources {
+	text-decoration: none;
+	list-style: none;
+}
+
+#resources a {
+	color: gold;
 }
